--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Handle 404 errors
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.web.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 #
